--- a/embold.com/company-careers.html
+++ b/embold.com/company-careers.html
@@ -98,15 +98,15 @@
       <div class="body-content">
         <div class="col-6">
           <div class="wrap-value">
-            <div class="photo bg-team-value-international"></div>
+            <div class="photo bg-team-value-international photo-company-team-value-1"></div>
             <h3 class="title">International</h3>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
             </p>
           </div>
           <div class="wrap-value">
-            <div class="photo bg-team-value-international"></div>
-            <h3 class="title">International</h3>
+            <div class="photo bg-team-value-international photo-company-team-value-2"></div>
+            <h3 class="title">One goal, One team</h3>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
             </p>
@@ -114,8 +114,8 @@
         </div>
         <div class="col-6">
           <div class="wrap-value wrap-value-left">
-            <div class="photo bg-team-value-international"></div>
-            <h3 class="title">International</h3>
+            <div class="photo bg-team-value-international photo-company-team-value-3"></div>
+            <h3 class="title">Best Environment</h3>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
             </p>
@@ -208,8 +208,7 @@
     </div>
   </section>
   <section class="block block-section-fw philosophy">
-    <div class="photo">
-      photo
+    <div class="photo photo-vishal-rai-big">
     </div>
     <div class="description">
       <p class="paragraph">
