--- a/embold.com/product-features.html
+++ b/embold.com/product-features.html
@@ -101,10 +101,13 @@
   </section>
   <section class="container block block-section-sub block-section-right">
     <div class="row">
-      <div class="col-6">
-        image
+      <div class="col-1">
+
       </div>
-      <div class="col-6">
+      <div class="col-5">
+        <div class="il-product-features-multi-dimension background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-5">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">Multi-Dimensional Static Analysis</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
