--- a/embold.com/product-pricing.html
+++ b/embold.com/product-pricing.html
@@ -99,7 +99,7 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="pricing-tab">
+        <div class="pricing-tab" onclick="window.location.href='./product-pricing-on-premise.html'">
           <i class="icon-md ic-servers"></i>
           <h3 class="pricing-title">On-Premise</h3>
           <p class="pricing-description">
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="pricing-tab">
+        <div class="pricing-tab" onclick="window.location.href='./product-pricing-enterprise.html'">
           <i class="icon-md ic-building-big"></i>
           <h3 class="pricing-title">Enterprise</h3>
           <p class="pricing-description">
