--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -78,10 +78,9 @@
     <div class="header-image bg-index-hero"></div>
     <div class="container block block-hero">
       <div class="row">
-        <div class="col-8">
+        <div class="col-6">
           <div class="wrap-hero-content">
-            <h1 class="headcopy">We are getting better
-              Introducing our Brand
+            <h1 class="headcopy">We are getting better Introducing our Brand
             </h1>
             <p class="description">
               When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.
