--- a/embold.com/company-about.html
+++ b/embold.com/company-about.html
@@ -173,27 +173,25 @@
       </div>
     </div>
   </section>
-  <section class="container block block-section-sub team-value">
-    <div class="row">
-      <div class="col-12">
-        <span class="icon-section ic-star-glow"></span>
-        <h2 class="section-title">Timeline</h2>
-        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="body-content">
+  <section class="block block-section-sub timeline">
+    <div class="container">
+      <div class="row">
         <div class="col-12">
-          <div class="member-big">
-            <div class="member-photo">
-
-            </div>
-            <div class="member-detail">
-
-            </div>
-          </div>
+          <span class="icon-section ic-star-glow"></span>
+          <h2 class="section-title">Timeline</h2>
+          <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
         </div>
       </div>
     </div>
+    <div class="wrap-timeline">
+      <div class="content-timeline">
+      </div>
+      <div class="arrow-right link-arrow">
+
+      </div>
+    </div>
   </section>
+
   <section class="container block block-section-sub block-section-left company-offices">
     <div class="row">
       <div class="col-12">
