--- a/embold.com/user-stories-user-roles.html
+++ b/embold.com/user-stories-user-roles.html
@@ -100,13 +100,13 @@
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
             <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Developer</span>
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
             </div>
             <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Architect</span>
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
             </div>
             <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Product Manager</span>
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
             </div>
           </div>
         </div>
