--- a/embold.com/company-news.html
+++ b/embold.com/company-news.html
@@ -82,71 +82,17 @@
     <div class="row">
       <div class="col-8">
         <h1 class="header-sub-title">
-          New
+          News
         </h1>
       </div>
     </div>
     <div class="header-image bg-company-news"></div>
   </div>
-  <section class="container block block-section-sub company-about-status">
-    <div class="row">
-      <div class="body-content">
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   <section class="block block-company-summary">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          test
+          News articles
         </div>
       </div>
     </div>
