--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="col-12 text-center">
-        <button class="btn btn-default btn-md">Find out more Features</button>
+        <button class="btn btn-default btn-md" onclick="window.location.href='./product-features.html'">Find out more Features</button>
       </div>
     </div>
   </section>
@@ -281,7 +281,7 @@
         </div>
       </div>
       <div class="col-12 text-center">
-        <button class="btn btn-default btn-md">Read About Embold</button>
+        <button class="btn btn-default btn-md" onclick="window.location.href='./company-about.html'">Read About Embold</button>
       </div>
     </div>
   </section>
@@ -294,7 +294,7 @@
           <p class="block-description">
             We are always wating your interestings about embold.<br />Please don’t hesitate to contact us.
           </p>
-          <button class="btn btn-default btn-md btn-more">Find out Documentation</button>
+          <button class="btn btn-default btn-md btn-more" onclick="window.location.href='./resources-product.html'">Find out Documentation</button>
         </div>
       </div>
     </div>
