--- a/embold.com/product-overview.html
+++ b/embold.com/product-overview.html
@@ -111,7 +111,7 @@
       </div>
       <div class="col-5">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Engine for your Code</h2>
+        <h2 class="section-title">Hotspot Rating Engine for your Code</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
