--- a/embold.com/company-news.html
+++ b/embold.com/company-news.html
@@ -78,16 +78,17 @@
     </div>
   </div>
 
-  <div class="container block block-header-sub">
+  <div class="block block-header-sub header-resource-product bg-resources-product background-no-repeat">
     <div class="row">
-      <div class="col-8">
+      <div class="col-12">
+        <!-- <h4>Resources</h4> -->
         <h1 class="header-sub-title">
-          News
+           News
         </h1>
       </div>
     </div>
-    <div class="header-image bg-company-news"></div>
   </div>
+
   <section class="block block-company-summary">
     <div class="container">
       <div class="row">
