--- a/embold.com/resources-product.html
+++ b/embold.com/resources-product.html
@@ -78,16 +78,15 @@
     </div>
   </div>
 
-  <div class="container block block-header-sub">
+  <div class="block block-header-sub header-resource-product bg-resources-product background-no-repeat">
     <div class="row">
-      <div class="col-8">
+      <div class="col-12">
+        <!-- <h4>Resources</h4> -->
         <h1 class="header-sub-title">
-          Resources<br />
-          Product
+           Product
         </h1>
       </div>
     </div>
-    <div class="header-image bg-resources-product"></div>
   </div>
 
   <section class="container block block-section-sub technical-documentation">
