--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -80,13 +80,12 @@
       <div class="row">
         <div class="col-6">
           <div class="wrap-hero-content">
-            <h1 class="headcopy">We are getting better Introducing our Brand
-            </h1>
+            <h1 class="headcopy">You can Improve your codes through EMBOLD</h1>
             <p class="description">
               When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.
             </p>
             <div class="wrap-sign-up">
-              <input class="input inline-input" type="text" placeholder="E-mail Address" />
+              <input class="input inline-input" type="text" placeholder="Type your E-mail Address" />
               <button class="btn btn-orange btn-md inline-input">Sign-Up</button>
             </div>
           </div>
