--- a/embold.com/resources-download.html
+++ b/embold.com/resources-download.html
@@ -78,71 +78,17 @@
     </div>
   </div>
 
-  <div class="container block block-header-sub">
+  <div class="block block-header-sub header-resource-product bg-resources-product background-no-repeat">
     <div class="row">
-      <div class="col-8">
+      <div class="col-12">
+        <!-- <h4>Resources</h4> -->
         <h1 class="header-sub-title">
-          Resources<br />
-          Download
+           Download
         </h1>
       </div>
     </div>
-    <div class="header-image bg-resources-download"></div>
   </div>
-  <section class="container block block-section-sub company-about-status">
-    <div class="row">
-      <div class="body-content">
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-coffee">
-            </div>
-            <div class="title">
-              Free Coffee and Drinks
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <section class="block block-company-summary">
     <div class="container">
       <div class="row">
