--- a/embold.com/resources-product.html
+++ b/embold.com/resources-product.html
@@ -95,7 +95,7 @@
         <span class="icon-section ic-star-glow"></span>
         <h2 class="section-title">Technical Documentation</h2>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <h3 class="title">Release Notes</h3>
         <ul class="document-list">
           <li>Release 1.6.0</li>
@@ -112,7 +112,7 @@
           <li>Release 1.2.4</li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <h3 class="title">Code Issues</h3>
         <ul class="document-list">
           <li>C/C++</li>
@@ -128,11 +128,58 @@
           <li>Solidity</li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="col-4">
         <h3 class="title">Anti-Patterns</h3>
+        <ul class="document-list">
+          <li>Anti-Patterns Overview</li>
+          <li>God Class</li>
+          <li>Shotgun Surgery</li>
+          <li>Feature Envy</li>
+          <li>Global Hub</li>
+          <li>Local Breakable</li>
+          <li>Global Breakable</li>
+          <li>Dispersed Coupling</li>
+          <li>Brain Method</li>
+          <li>Local Butterfly</li>
+          <li>Intensive Coupling</li>
+          <li>Brain Class</li>
+          <li>Data Class</li>
+          <li>Global Butterfly</li>
+          <li>Solution Sprawl NEW</li>
+          <li>Fat Interface NEW</li>
+          <li>Message Chain NEW</li>
+          <li>Fan Out NEW</li>
+          <li>Decapsulation NEW</li>
+          <li>Unused Method NEW</li>
+          <li>Format Exposure NEW</li>
+          <li>Data Exposure NEW</li>
+          <li>Global Variable NEW</li>
+        </ul>
       </div>
-      <div class="col-3">
-
+      <div class="col-4">
+        <h3 class="title">Anti-Patterns</h3>
+        <ul class="document-list">
+          <li>Metrics Overview</li>
+          <li>Metric Thresholds</li>
+          <li>Number of Attributes (NOA)</li>
+          <li>Lines of Code Comments (LOC_Comments)</li>
+          <li>Number of Methods (NOM)</li>
+          <li>Foreign Data Providers (FDP)</li>
+          <li>Locality of Attribute Accesses (LAA)</li>
+          <li>Number of Accessed Variables (NOAV)</li>
+          <li>Number of Statements (NOS)</li>
+          <li>Number of Accessor Methods (NOAM)</li>
+          <li>Access to Foreign Data (ATFD)</li>
+          <li>Lack of Cohesion Of Methods (LCOM)</li>
+          <li>Number of Public Attributes (NOPA)</li>
+          <li>Cyclomatic Complexity (CC)</li>
+          <li>Coupling Between Objects (CBO)</li>
+          <li>Maximum number of Parameters (MNOP)</li>
+          <li>Comment Ratio (CR)</li>
+          <li>Lines of Code (LOC)</li>
+          <li>Depth of Inheritance Hierarchy (DOIH)</li>
+          <li>Response for Class (RFC)</li>
+        </ul>
       </div>
     </div>
   </section>
