--- a/embold.com/company-team.html
+++ b/embold.com/company-team.html
@@ -7,76 +7,14 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/embold.css">
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/simple-grid.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.slim.js"
-  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
-  crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="nav-hover">
-    <nav class="nav nav-grid nav-index nav-default">
-      <div class="nav-item-logo">
-        <a href="index.html"><img src="images/logo-embold.svg" width="113" height="20" /></a>
-      </div>
-      <div class="nav-wrap-items">
-        <div class="nav-item-main">
-          Product <i class="fas fa-angle-down"></i>
-        </div>
-        <div class="nav-item-main">
-          User Stories <i class="fas fa-angle-down"></i>
-        </div>
-        <div class="nav-item-main">
-          Resources <i class="fas fa-angle-down"></i>
-        </div>
-        <div class="nav-item-main">
-          <span class="active">Company</span> <i class="fas fa-angle-down"></i>
-        </div>
-      </div>
-      <div class="nav-item-sign">
-        Sign-in
-      </div>
-      <div class="nav-item-sign">
-        Sign-up
-      </div>
-    </nav>
-    <div>
-      <div class="nav-grid nav-sub nav-default">
-        <div class="nav-item-logo">
-          &nbsp;
-        </div>
-        <div class="nav-wrap-items">
-          <div class="nav-item-main">
-            <a href="product-overview.html" class="nav-menu-link">Overview</a>
-            <a href="product-features.html" class="nav-menu-link">Features</a>
-            <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
-            <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
-            <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
-          </div>
-          <div class="nav-item-main">
-            <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
-            <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
-            <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
-            <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
-          </div>
-          <div class="nav-item-main">
-            <a href="resources-product.html" class="nav-menu-link">Product</a>
-            <a href="resources-download.html" class="nav-menu-link">Download</a>
-            <a href="resources-media.html" class="nav-menu-link">Media</a>
-          </div>
-          <div class="nav-item-main">
-            <a href="company-about.html" class="nav-menu-link">About</a>
-            <a href="company-team.html" class="nav-menu-link">Team</a>
-            <a href="company-careers.html" class="nav-menu-link">Careers</a>
-            <a href="company-news.html" class="nav-menu-link">News</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="nav-company"></div>
 
   <div class="container block block-header-sub">
     <div class="row">
