--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -16,11 +16,11 @@
     <div class="header-image bg-index-hero"></div>
     <div class="container block block-hero">
       <div class="row">
-        <div class="col-9">
+        <div class="col-8">
           <div class="wrap-hero-content">
             <h1 class="headcopy">You can Improve your codes through EMBOLD</h1>
             <p class="description">
-              When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.
+              When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract.
             </p>
             <div class="wrap-sign-up">
               <input class="input inline-input" type="text" placeholder="Type your E-mail Address" />
