--- a/embold.com/company-about.html
+++ b/embold.com/company-about.html
@@ -82,15 +82,17 @@
         <h2 class="section-title">We are a software company building products for the future</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="col-6">
-        image
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
   <section class="container block block-section-sub block-section-right">
     <div class="row">
-      <div class="col-6">
-        image
+      <div class="col-1">
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
       </div>
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
@@ -106,8 +108,8 @@
         <h2 class="section-title">We are a software company building products for the future</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="col-6">
-        image
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
@@ -115,7 +117,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <span class="icon-section ic-star-glow"></span>
+          <span class="icon-section ic-timeline"></span>
           <h2 class="section-title">Timeline</h2>
           <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
         </div>
@@ -133,7 +135,7 @@
   <section class="container block block-section-sub block-section-left company-offices">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-star-glow"></span>
+        <span class="icon-section ic-office-location"></span>
         <h2 class="section-title">Offices</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
