--- a/embold.com/product-pricing.html
+++ b/embold.com/product-pricing.html
@@ -189,7 +189,7 @@
   <section class="container block block-section-sub company-benefit">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-gift-box"></span>
+        <span class="icon-section ic-faq"></span>
         <h2 class="section-title">Cloud-Based FAQ</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies.
           They are improving their codes and applications via embold.
