--- a/embold.com/user-stories-industry.html
+++ b/embold.com/user-stories-industry.html
@@ -22,7 +22,7 @@
         <h1 class="header-sub-title">By Industry</h1>
       </div>
     </div>
-    <div class="header-image bg-user-stories-industry"></div>
+    <div class="header-image bg-user-stories-industry "></div>
   </div>
 
   <div class="tab-role">
@@ -38,13 +38,13 @@
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
             <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Developer</span>
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
             </div>
             <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Architect</span>
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
             </div>
             <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Product Manager</span>
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
             </div>
           </div>
         </div>
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <section class="block">
+  <section class="block block-sub-user-stories">
     <div class="container">
       <div class="row">
         <div class="col-3">
@@ -232,7 +232,7 @@
   <script src="js/main.js" type="text/javascript"></script>
   <script>
   $(window).on("scroll", function() {
-    if($(window).scrollTop() > 600 && $(window).scrollTop() < 1950) {
+    if($(window).scrollTop() > 570 && $(window).scrollTop() < 1950) {
       $(".block-sub-menu").addClass("block-sub-menu-fix");
       $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
     } else if ($(window).scrollTop() >= 1950) {
