--- a/embold.com/user-stories-user-roles.html
+++ b/embold.com/user-stories-user-roles.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <section class="block">
+  <section class="block block-sub-user-stories">
     <div class="container">
       <div class="row">
         <div class="col-3">
