--- a/embold.com/company-team.html
+++ b/embold.com/company-team.html
@@ -89,7 +89,7 @@
   <section class="container block block-section-sub block-section-left team-value">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-star-glow"></span>
+        <span class="icon-section ic-focus"></span>
         <h2 class="section-title">Investers</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
@@ -110,7 +110,7 @@
   <section class="container block block-section-sub block-section-left team">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-star-glow"></span>
+        <span class="icon-section ic-members"></span>
         <h2 class="section-title">Member</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
