--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-<body>
+<body class="index">
   <div class="nav-hover"></div>
 
   <div class="container-fluid bg-light block-index-hero">
     <div class="header-image bg-index-hero"></div>
     <div class="container block block-hero">
       <div class="row">
-        <div class="col-8">
+        <div class="col-12">
           <div class="wrap-hero-content">
             <h1 class="headcopy">You can Improve your codes through EMBOLD</h1>
             <p class="description">
