--- a/embold.com/product-overview.html
+++ b/embold.com/product-overview.html
@@ -27,15 +27,13 @@
 
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-1">
-
-      </div>
-      <div class="col-5">
+      <div class="col-6">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">Ruleless Static Analysis</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="col-5 background-no-repeat il-product-overview-ruleless-static body-illustration">
+      <div class="col-5">
+        <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
@@ -45,9 +43,9 @@
 
       </div>
       <div class="col-5">
-        image
+        <div class="il-alt background-no-repeat body-illustration"></div>
       </div>
-      <div class="col-5">
+      <div class="col-6">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">Hotspot Rating Engine for your Code</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
@@ -56,16 +54,13 @@
   </section>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-1">
-
-      </div>
-      <div class="col-5">
+      <div class="col-6">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">NCP</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-5">
-        image
+        <div class="il-alt background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
