--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -24,7 +24,7 @@
             <span class="product">Product</span> <i class="fas fa-angle-down"></i>
           </div>
           <div class="nav-item-main">
-            <span class="user-stories">User Stories</span> <i class="fas fa-angle-down"></i>
+            <span class="user-stories">Solutions</span> <i class="fas fa-angle-down"></i>
           </div>
           <div class="nav-item-main">
             <span class="resources">Resources</span> <i class="fas fa-angle-down"></i>
